# snif-1.0

./: .!4205!todo  Makefile  Makefile.am  Makefile.in  arp.c  authors  chdlc.c  chdlc.h  color.h  config.h  config.h.in  config.status  config.status.lineno  configure  configure.in  decodearp.c  dnscache.h  eap.c  eap.h  enc.c  enc.h  ethernet.c  ethernet.h  ethlb.c  fddi.c  fddi.h  gre.c  gre.h  i4lciscoip.c  i4lrawip.c  icmp.c  icmp.c~  icmp.h  icmp.h~  ip.c  ip.h  ipv6.c  ipv6.h  ipx.c  llc.c  (+37 more)
.deps/: arp.Po  chdlc.Po  eap.Po  enc.Po  ethernet.Po  ethlb.Po  fddi.Po  gre.Po  i4lciscoip.Po  i4lrawip.Po  icmp.Po  ip.Po  ipv6.Po  ipx.Po  llc.Po  loopback.Po  oldpflog.Po  pflog.Po  ppp.Po  pppoe.Po  pppserial.Po  raw.Po  slip.Po  sll.Po  snap.Po  snif.Po  tcp.Po  tokenring.Po  udp.Po  vlan.Po  wifi.Po
autom4te.cache/: output.0  traces.0
contrib/: preformat_ether.pl  preformat_ether.pl~  preformat_ether_other.pl  preformat_ether_perso.pl  preformat_ports.pl  preformat_ports.pl.bak  readme  updatevar.sh  updatevar.sh.bak  updatevar.sh~
scratch/: algohashtableDNScache.txt  autoconf.html  lan.htm  readme
scratch/autoconf_files/: silver.html
scratch/lan_files/: Click_here_PerformerAnalyzer.swf  Protocols.css  puzzle.swf  radcom.swf
sfutil/: Makefile  Makefile.am  Makefile.in  sfhashfcn.c  sfmemcap.c  sfxhash.c
var/: ieee_ethercodes.dat.bak  oui.txt  port-numbers  port-numbers.txt
